Archive2/3b/18363b6e1f579e/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'BVal<int> getCostam()':
main.cpp:7:12: error: could not convert '20' from 'int' to 'BVal<int>'
     return 20;   
            ^
main.cpp:8:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
