Archive2/3b/18363b6e1f579e/main.cpp
template <typename T>
class BVal {
  
};

BVal<int> getCostam() { 
    return 20;   
}